update multi-tenant plugin files

--- a/Presentation/Nop.Web/Areas/Admin/sitemap.config
+++ b/Presentation/Nop.Web/Areas/Admin/sitemap.config
@@ -69,6 +69,7 @@
       </siteMapNode>
       <siteMapNode SystemName="Email accounts" nopResource="Admin.Configuration.EmailAccounts" PermissionNames="ManageEmailAccounts" controller="EmailAccount" action="List" IconClass="far fa-dot-circle"/>
       <siteMapNode SystemName="Stores" nopResource="Admin.Configuration.Stores" PermissionNames="ManageStores" controller="Store" action="List" IconClass="far fa-dot-circle"/>
+	  <siteMapNode SystemName="Stores Mapping" nopResource="Admin.Configuration.StoresMapping" PermissionNames="ManageStores" controller="StoreMapping" action="List" IconClass="far fa-dot-circle"/>
       <siteMapNode SystemName="Countries" nopResource="Admin.Configuration.Countries" PermissionNames="ManageCountries" controller="Country" action="List" IconClass="far fa-dot-circle"/>
       <siteMapNode SystemName="Languages" nopResource="Admin.Configuration.Languages" PermissionNames="ManageLanguages" controller="Language" action="List" IconClass="far fa-dot-circle"/>
       <siteMapNode SystemName="Currencies" nopResource="Admin.Configuration.Currencies" PermissionNames="ManageCurrencies" controller="Currency" action="List" IconClass="far fa-dot-circle"/>      
